Changed version to 1.3, some code cleanup, fixes in crafting plugin, added xp support to crafting plugin, added global vendor items, tab complete for economy items, separate no-permission message for vendor items, fixed bug with deleting file after removing economy items, added attributes to item builder.